Several fixes and improvements in expresso, as I flesh out the unit test for Quick-Style